	- renamed all configuration variables to config_*
	- re-grouped the static variables
	- removed unnecessary static variable "use_custom_list"
	- moved the configuration code to config.c/.h
	- cleaned up global variables

	create_report
	- initial version

	create_image_xml
	- added version number

0.69
	- moved mrt_mkdir() to common.c/.h
	- added "get_filename" to common.c/.h
	- updated copyright
	- renamed "block" to "chunk"
	- renamed internal_get_IDAT_data() to internal_get_next_IDAT_data()
	- changed variable declarations
	- added "png_width" and "png_height" for PNGs to XML output
	- renamed get_png_IDAT_data() to get_png_data()
	- added option "write_avi" to control creation of .avi files
	- renamed open_mng_and_skip_header() to open_mng_and_skip_sig()
	- added get_MHDR_data()
	- added "width" and "height" for MNGs to XML output
	- added option "verbose" to enable more logging
	- move some log messages to "verbose" mode
	- improved some error messages
	- disabled logging of configuration entries
	- moved calc_crc32(), clear_directory() and clear_callback() to common.c/.h
	- added clear_callback_nosnap() and clear_directory_nosnap()
	- changed option "store_output" to take value "2" to only store the "snap" folder
	- bail out when "output_folder" was found and "clear_output_folder" is not set
	- print a message when valgrind options are not supported
	- added disabled code to support gdb calls
	- removed "please report" from log message

	create_report
	- added option "report_type" (0 = result report / 1 = comparison report)
	- added option "compare_folder" (used for comparison report to compare "xml_folder" against)
	- implemented comparison report (checks "exitcode", "stderr" and "png_crc")
	- fixed crash when invalid configuration was specified
	- added option "print_stdout" to add stdout data to report
	- made it possible to simply use "print_stdout" and "print_stderr"
	- added "stdout_file" and "stderr_file" to default configuration to match old reports